[MS7] delete link to useless iamges

--- a/doc/thesis/201605_PlanPresentation/presentation.tex
+++ b/doc/thesis/201605_PlanPresentation/presentation.tex
@@ -26,7 +26,7 @@
 
 \institute{May 2016}
 
-\author{Simon Carrignon\\ supervisors: Xavier Rubio-Campillo \& Sergi Vavlerde}
+\author{Simon Carrignon\\\vspace{.5cm} {\tiny Supervisors: Xavier Rubio-Campillo \& Sergi Vavlerde}}
 
 \date{
 	\scriptsize
