[BIB] bilbio up

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -96,7 +96,7 @@
 
 @article{waters2010allometricscalingofmetabolismgrowthandactivityinwholecoloniesoftheseedharvesterantempogonomyrmexcalifornicusem,
 	abstract = "Abstract: The negative allometric scaling of metabolic rate with body size is among the most striking patterns in biology. We investigated whether this pattern extends to physically independent eusocial systems by measuring the metabolic rates of whole functioning colonies of the seed‐harvester ant Pogonomyrmex californicus. These intraspecific scaling data were compared to the predictions of an additive model developed to estimate collective metabolic rates. Contrary to the prediction of the additive model, colony metabolic rate allometry resembled the pattern commonly observed interspecifically for individual organisms, scaling with colony mass0.75. Among the same‐aged colonies, net growth rate varied by up to sevenfold, with larger colonies exhibiting higher net growth efficiency than smaller colonies. Isolated worker groups exhibited isometric metabolic rate scaling, suggesting that the social environment of the colony is critical to regulating individual patterns of work output. Within the social environment, individual worker locomotor velocities exhibited power‐law distributions that scaled with colony size so that larger colonies exhibited a greater disparity between active and inactive ants than did smaller colonies. These results demonstrate that behavioral organization within colonies may have a major influence on colony‐level metabolism and in generating intraspecific variation in growth trajectories.",
-	author = "{James S. Waters}, C. Tate Holbrook Jennifer H. Fewell Jon F. Harrison Associate Editor: Kevin J. Gaston Editor: Donald L. DeAngelis",
+	author = "Waters, James S. and Holbrook, C. Tate and Fewell, Jennifer H. and Harrison, Jon F.",
 	issn = "00030147, 15375323",
 	journal = "The American Naturalist",
 	localfile = "../pdfs/waters2010allometricscalingofmetabolismgrowthandactivityinwholecoloniesoftheseedharvesterantempogonomyrmexcalifornicusem.pdf",
@@ -1865,5 +1865,20 @@
 	url = "http://science.sciencemag.org/content/132/3436/1291",
 	volume = "132",
 	year = "1960"
+}
+
+@article{gallagher2015transitiontofarmingmorelikelyforsmallconservativegroupswithpropertyrightsbutincreasedproductivityisnotessential,
+	abstract = "Theories for the origins of agriculture are still debated, with a range of different explanations offered. Computational models can be used to test these theories and explore new hypotheses; Bowles and Choi [Bowles S, Choi J-K (2013) Proc Natl Acad Sci USA 110(22):8830--8835] have developed one such model. Their model shows the coevolution of farming and farming-friendly property rights, and by including climate variability, replicates the timings for the emergence of these events seen in the archaeological record. Because the processes modeled occurred a long time ago, it can be difficult to justify exact parameter values; hence, we propose a fitting to idealized outcomes (FIO) method to explore the model{\rq}s parameter space in more detail. We have replicated the model of Bowles and Choi, and used the FIO method to identify complexities and interactions of the model previously unidentified. Our results indicate that the key parameters for the emergence of farming are group structuring, group size, conservatism, and farming-friendly property rights (lending further support to Bowles and Choi{\rq}s original proposal). We also find that although advantageous, it is not essential that farming productivity be greater than foraging productivity for farming to emerge. In addition, we highlight how model behaviors can be missed when gauging parameter sensitivity via a fix-all-but-one variation approach.",
+	author = "Gallagher, Elizabeth M. and Shennan, Stephen J. and Thomas, Mark G.",
+	doi = "10.1073/pnas.1511870112",
+	eprint = "http://www.pnas.org/content/112/46/14218.full.pdf",
+	journal = "Proceedings of the National Academy of Sciences",
+	localfile = "../pdfs/gallagher2015transitiontofarmingmorelikelyforsmallconservativegroupswithpropertyrightsbutincreasedproductivityisnotessential.pdf",
+	number = "46",
+	pages = "14218--14223",
+	title = "{Transition to farming more likely for small, conservative groups with property rights, but increased productivity is not essential}",
+	url = "http://www.pnas.org/content/112/46/14218.abstract",
+	volume = "112",
+	year = "2015"
 }
 
